# api-flask-dio

./: README.md  app.py  pyproject.toml
migrations/versions/: 54210adf7184_initial_migration.py
src/controllers/: auth.py  post.py  role.py  user.py
src/models/: __init__.py  post.py  role.py  user.py
src/services/: create_user.py  delete_user.py  fetch_users.py  get_user_by_id.py  patch_user.py
src/utils/: role_decorator.py
