[tool.poetry]
name = "dio-bank"
version = "0.1.0"
description = ""
authors = ["Marlon <marlon.29@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "*"
Flask-SQLAlchemy = "*"
Flask-JWT-Extended = "*"
Flask-Migrate = "*"
pytest = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "flask.cli:main"
